[aliases]
release = egg_info -RDb ''
# Make sure the docs are uploaded when we do an upload
upload = upload upload_docs --upload-dir build/sphinx/html

[bdist_rpm]
doc-files = doc

[wheel]
universal=1

[tool:pytest]
addopts =
    --doctest-glob="doc/*.rst"
    --doctest-modules
     -p no:warnings
     --ignore joblib/externals
testpaths = joblib

[flake8]
# For PEP8 error codes see
# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E402: module level import not at top of file
ignore=E402
exclude=joblib/externals/*

[metadata]
license_file = LICENSE.txt
