[metadata]
name = joblib
version = attr: joblib.__version__
author = Gael Varoquaux
author_email = gael.varoquaux@normalesup.org
license = BSD 3-Clause
description = Lightweight pipelining with Python functions
url = https://joblib.readthedocs.io
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Topic :: Software Development :: Libraries
platforms = any
project_urls =
    Source = https://github.com/joblib/joblib

[options]
packages =
    joblib
    joblib.test
    joblib.test.data
    joblib.externals
    joblib.externals.cloudpickle
    joblib.externals.loky
    joblib.externals.loky.backend
python_requires = >=3.7

[options.package_data]
joblib.test =
    data/*.gz
    data/*.gzip
    data/*.bz2
    data/*.xz
    data/*.lzma
    data/*.pkl
    data/*.npy
    data/*.npy.z

[aliases]
release = egg_info -RDb ''
# Make sure the docs are uploaded when we do an upload
upload = upload upload_docs --upload-dir doc/_build/html

[bdist_rpm]
doc_files = doc

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
addopts =
    --doctest-glob="doc/*.rst"
    --doctest-modules
    --ignore joblib/externals
testpaths = joblib

[flake8]
# For PEP8 error codes see
# https://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E402: module level import not at top of file
ignore=E402,W504
exclude=joblib/externals/*

